# phonon

./: pyproject.toml
freeenergy/.ipynb_checkpoints/: dos_input-checkpoint  start_run-checkpoint.py
freeenergy/cdw/: POSCAR  POSCAR-dis  POSCAR.vesta  POSCAR_edit.vesta  band.hdf5  bandfolding.py  diff_force_constant.py  displacement.py  distort.py  fit.py  lib.py  plot_atomic_position.py  plot_force_constant.py  plot_phonon.py  plot_phonon_displacement.py  print_out_data.py  test.csv
freeenergy/free_energy/: DOSCAR  Untitled.ipynb  analysis.py  data_dos.csv  data_free.csv  dos_data.csv  dos_intg.csv  free.py  free_electrion.ipynb  phi_data.csv  test
tests/: test_freeenergy.py
