[tool.poetry]
name = "FreeEnergy"
version = "0.1.0"
description = ""
authors = ["zxc6981189 <zxc6981189@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
neovim = "^0.3.1"
numpy = "^1.23.3"
matplotlib = "^3.6.0"
pandas = "^1.5.0"
jupyter = "^1.0.0"
ipdb = "^0.13.9"
jupyterlab = "^3.5.0"
PyYAML = "^6.0"
h5py = "^3.7.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
